--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,9 @@
     </header>
 
     <main></main>
-
+    <footer class="footer">
+      <p>Created by Denis and Supreeti under MIT license</p>
+  </footer>
     <script defer src="runtime.bundle.js"></script>
     <script defer src="main.bundle.js"></script>
   </body>
