--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,12 @@
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section id="home-container">
+        <ul class="rockets-container"></ul>
+      </section>
+    </main>
+
     <footer class="footer">
       <p>Created by Denis and Supreeti under MIT license</p>
   </footer>
