Add all items/rockets counter to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
           </a>
         </div>
         <ul>
-          <li><a href="#">Rockets</a></li>
+          <li id="rocketsMenuItem">
+            <a href="#">Rockets</a>
+          </li>
           <li><a href="#">Planets</a></li>
           <li><a href="#">Races</a></li>
         </ul>
