Add new like and display likes of each item

--- a/src/index.html
+++ b/src/index.html
@@ -15,14 +15,21 @@
           </a>
         </div>
         <ul>
-          <li><a href="#">Rockets</a></li>
+          <li id="rocketsMenuItem">
+            <a href="#">Rockets</a>
+          </li>
           <li><a href="#">Planets</a></li>
           <li><a href="#">Races</a></li>
         </ul>
       </nav>
     </header>
 
-    <main></main>
+    <main>
+      <section id="home-container">
+        <ul class="rockets-container"></ul>
+      </section>
+    </main>
+
     <footer class="footer">
       <p>Created by Denis and Supreeti under MIT license</p>
   </footer>
