fix linters errors

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
     </main>
 
     <footer class="footer">
-      <p>Created by Denis and Supreeti under MIT license</p>
+      <p>Created by Dennis and Supreeti under MIT license</p>
   </footer>
     <script defer src="runtime.bundle.js"></script>
     <script defer src="main.bundle.js"></script>
