edit comment and popup window

--- a/src11/index.html
+++ b/src11/index.html
@@ -12,11 +12,12 @@
       <nav>
         <div>
           <a href="#" class="logo">
-            <img src='' alt="Your Logo" class="logo-image">
+            <img src=" " alt="Your Logo" class="logo-image">
           </a>
         </div>
         <ul>
           <li id="rockets-menu-item">
+
             <a href="#">Rockets</a>
           </li>
           <li><a href="#">Planets</a></li>
@@ -27,9 +28,9 @@
 
     <main>
       <section id="home-container">
-        <!-- <i class="fas fa-times-circle" id='modal-btn'></i> -->
         <ul class="rockets-container"></ul>
       </section>
+      <i class="fas fa-times-circle" id="modal-btn"></i>
       <section class="popups-container"></section>
     </main>
 
